Task1/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-prod
  labels:
    app: nginx
    env: prod
spec:
  containers:
  - name: nginx
    image: nginx
