Task1/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: intruder-pod
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
