Task1/db.yaml
apiVersion: v1
kind: Pod
metadata:
  name: db
  labels:
    name: db
    env: prod
spec:
  containers:
  - name: postgres
    image: postgres:latest
    ports:
      - containerPort: 5432

---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  selector:
    name: db
    env: prod
  ports:
    - name: http-port
      protocol: TCP
      port: 5432 # Service port
      targetPort: 5432 # Container port



# apt install postgresql-client
# psql -h db-svc.default.svc.cluster.local -U user postgres
